Change project name + other renames

--- a/src/Sejil.Client/index.html
+++ b/src/Sejil.Client/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Logs</title>
-    <meta name="description" content="Logs">
+    <meta name="description" content="Sejil">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
