--- a/src/Sejil.Client/index.html
+++ b/src/Sejil.Client/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Logs</title>
+    <title>Sejil</title>
     <meta name="description" content="Sejil">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
