--- a/src/Sejil.Client/index.html
+++ b/src/Sejil.Client/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="Sejil">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300" rel="stylesheet">
     <link rel="stylesheet" href="app.css">
 </head>
 
